--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,30 @@
-# Compiled class file
+target/
+work/
 *.class
 
-# Log file
-*.log
+# Ignore Intellij Idea project files
+*.iml
+*.ipr
+.idea
+atlassian-ide-plugin.xml
+out/
 
-# BlueJ files
-*.ctxt
+# Ignore Eclipse project files
+.settings
+.project
+.classpath
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Ignore MacOSX files
+.DS_Store
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Ignore Netbeans project files
+nbproject/
+nbbuild/
+/bin/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Microsoft Visual Studio Code
+.vscode/
+
+# build temp folders
+rpmbuild/
+debian/
